# django-slack-app

./: .gitignore  LICENSE  MANIFEST.in  README.md  manage.py  setup.cfg  setup.py
slack_app/: __init__.py  admin.py  apps.py  auth_backends.py  decorators.py  exceptions.py  helpers.py  models.py  signals.py  tasks.py  urls.py  views.py
slack_app/migrations/: 0001_initial.py
slack_app/templates/: verified_nonce.html
slack_integration/: __init__.py  apps.py  decorators.py  forms.py  helpers.py  settings.py  urls.py  views.py
slack_integration/migrations/: 0001_initial.py
slack_integration/templates/: slack_base.html
